# music_bpm_detection

./: .gitignore  CMakeLists.txt  HISTORY.md  IMPLEMENTATION_NOTES.md  LICENSE  METRONOME_EXPLAINED.txt  MP3_DECODER_EXPLAINED.txt  ONSET_DETECTOR_EXPLAINED.txt  README.md  RESEARCH.md  claude_code_implementation_plan.md
docs/: BEAT_TRACKER_EXPLAINED.txt  PIPELINE_EXPLAINED.txt  TEMPO_ESTIMATOR_EXPLAINED.txt  WAV_WRITER_EXPLAINED.txt
include/bpm/: audio_buffer.h  beat_tracker.h  key_detector.h  meter_detector.h  metronome.h  mp3_decoder.h  mp4_decoder.h  onset_detector.h  pipeline.h  tempo_estimator.h  wav_reader.h  wav_writer.h  youtube_decoder.h
scripts/: build.sh  notebook.sh  test.py  test.sh
src/: audio_buffer.cpp  beat_tracker.cpp  key_detector.cpp  main.cpp  meter_detector.cpp  metronome.cpp  mp3_decoder.cpp  mp4_decoder.cpp  onset_detector.cpp  pipeline.cpp  tempo_estimator.cpp  wav_reader.cpp  wav_writer.cpp  youtube_decoder.cpp
test_samples/: yt_testlist.txt
visualizer/: README.md  bpm_visualizer.ipynb  requirements.txt
